// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#EmailField() it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="email"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="email"
      validators={
        [
          [Function],
        ]
      }
      value="joejoe"
    />
  </div>
</form>
`;

exports[`#EmailField() should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="email"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="email"
      value="email@email.com"
    />
  </div>
</form>
`;

exports[`#EmailField() should render an email field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <input
      className="form-control "
      name="email"
      onChange={[Function]}
      onKeyUp={[Function]}
      type="email"
      value="joe@joe.com"
    />
  </div>
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  onSubmit={[Function]}
/>
`;
